--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
  </body>
      <script type="text/javascript">
 //你想去哪儿，就去哪儿！
-         window.location.href = "https://xtrojan.net"; 
+         window.location.href = "https://xtrojan.top"; 
      </script>
  </html>
