--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html>
  <head>
  <meta charset="utf-8">
- <title>XTrojan黑科技的镜像站</title>
+ <title>XTrojan黑科技</title>
      <style media="screen">
          * {
                  margin: 0;
