--- a/index.html
+++ b/index.html
@@ -1,19 +1,11 @@
 <!DOCTYPE html>
- <html>
- <head>
- <meta charset="utf-8">
- <title>XTrojan黑科技</title>
-     <style media="screen">
-         * {
-                 margin: 0;
-                 padding: 0;
-         }
-     </style>
- </head>
- <body>
- </body>
-     <script type="text/javascript">
-//你想去哪儿，就去哪儿！
-         window.location.href = "https://xtrojan.vip"; 
-     </script>
- </html>
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><meta http-equiv="refresh" content="3;url='https://xtrojan.vip';">
+<title>XTrojan黑科技</title>
+<style type="text/css">html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}body{background:#3498db}#loader-container{width:188px;height:188px;color:white;margin:0 auto;position:absolute;top:50%;left:50%;margin-right:-50%;transform:translate(-50%,-50%);border:5px solid #3498db;border-radius:50%;-webkit-animation:borderScale 1s infinite ease-in-out;animation:borderScale 1s infinite ease-in-out}#loadingText{font-family:'Raleway',sans-serif;font-size:1.4em;position:absolute;top:50%;left:50%;margin-right:-50%;transform:translate(-50%,-50%)}@-webkit-keyframes borderScale{0%{border:5px solid white}50%{border:25px solid #3498db}100%{border:5px solid white}}@keyframes borderScale{0%{border:5px solid white}50%{border:25px solid #3498db}100%{border:5px solid white}}</style>
+</head>
+<body>
+<div id="loader-container"><center><p id="loadingText">正在安全检查<br/>加速引导中<br/>请耐心等待...</p></center></div>
+</body>
+</html>
